<?xml version="1.0"?>
<package format="2">
  <name>mav_sensors_ros</name>
  <version>1.0.0</version>
  <description>
    A ROS 1 interface for mav_sensors.
  </description>
  <author>Rik Girod</author>
  <maintainer email="brik@ethz.ch">Rik Girod</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>lpp</depend>
  <depend>mav_sensors_drivers</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>nodelet</depend>
  <depend>std_srvs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
